--- a/steffy_corejava/pom.xml
+++ b/steffy_corejava/pom.xml
@@ -4,4 +4,9 @@
   <artifactId>steffy_corejava</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>steffy_corejava</name>
+  <properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
+	</properties>
 </project>
